# overpass

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  config.example.yaml  config.yaml  pyproject.toml  tmp_probe_hltv_match_detail_fetch.py
deploy/: Caddyfile  docker-entrypoint.sh
docs/: DEPLOYMENT.md
docs/new-design/: chatgpt.html
output/briefings/: 2026-04-22.html
overpass/: __init__.py  config.py  demo.py  main.py  pipeline.py  worker.py
overpass/collectors/: base.py  hltv_matches.py  hltv_news.py  hltv_upcoming.py  podcast.py  reddit.py  social.py  steam.py  youtube.py
overpass/data/: this_day_in_cs.yaml
overpass/delivery/: html.py  telegram.py
overpass/editorial/: base.py  digest.py  gemini.py
tests/: test_config.py  test_digest_match_blurbs.py  test_gemini_provider.py  test_history_loader.py  test_history_lookup.py  test_history_models.py  test_hltv_collectors.py  test_hltv_matches_collector.py  test_hltv_matches_collector_liquipedia_fallback.py  test_hltv_matches_parser.py  test_hltv_news_collector.py  test_hltv_news_parser.py  test_hltv_upcoming_collector.py  test_hltv_upcoming_parser.py  test_html_delivery.py  test_liquipedia_cache.py  test_liquipedia_client.py  test_liquipedia_matches_parser.py  test_liquipedia_pages.py  test_liquipedia_ratelimit.py  test_pipeline.py  test_podcast_collector.py  test_reddit_collector.py  test_social_collector.py  test_steam_collector.py  test_worker.py  test_youtube_collector.py
tools/: smoke_social.py  smoke_upcoming.py
(+33 files in other folders)
