[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overpass"
version = "0.1.0"
description = "CS2 Daily Briefing & Live Alerts"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",
    "jinja2>=3.1",
    "python-telegram-bot>=20.0",
]

[project.scripts]
overpass = "overpass.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
